# Python-for-Data-Science

./: README.md
Python-0-Starting/: README.md
Python-0-Starting/ex00/: Hello.py
Python-0-Starting/ex01/: format_ft_time.py
Python-0-Starting/ex02/: find_ft_type.py
Python-0-Starting/ex03/: NULL_not_found.py
Python-0-Starting/ex04/: whatis.py
Python-0-Starting/ex05/: building.py
Python-0-Starting/ex06/: filterstring.py  ft_filter.py
Python-0-Starting/ex07/: sos.py
Python-0-Starting/ex08/: Loading.py
Python-0-Starting/ex09/ft_package/: LICENSE  README.md  pyproject.toml
Python-0-Starting/ex09/ft_package/ft_package/: count_in_list.py
