[project]
name = "ft_package"
version = "0.0.1"
description = "A sample test package"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name="nbouljih", email="nbouljih@137.ma" }
]
maintainers = [
  { name="nbouljih", email="nbouljih@137.ma" }
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/eagle/ft_package"
